переработка чата